objects/Account_Country_Domains__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Currency_Code__c</fullName>
        <label>Currency Code</label>
        <length>3</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <label>Is Valid</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Language_Locale_Key1__c</fullName>
        <inlineHelpText>Separate each code with comma. 

Language Locale Key codes: 
English - en_us
Spanish - es
French - fr
Italian - it
German - de
French (Belgium) - fr_be
Dutch (Belgium) - nl_be
Dutch (Netherland) - nl_nl
Dutch - nl</inlineHelpText>
        <label>Language Locale Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale_SID_Key1__c</fullName>
        <label>Locale SID Key</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Account Country Domains</label>
</CustomObject>